[package]
name = "winnow_iso8601"
version = "0.2.0"
description = "Parsing ISO8601 dates using winnow"
keywords = [ "iso8601", "date-time", "parser", "winnow" ]
categories = [ "parser-implementations", "date-and-time" ]

repository = "https://github.com/soulstompp/winnow-iso8601"
documentation = "https://docs.rs/winnow-iso8601/"
license = "MIT"
readme = "README.md"

edition = "2021"

[dependencies]
winnow = {  version = "0.6.20"}
chrono = { version = "0.4", default-features = false, optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies ]
serde_json = "1.0"

[features]
default = ["std"]
std = ["winnow/std"]
chrono = ["dep:chrono", "dep:num-traits"]
